--- a/templates/laboratory/analysis_field/analysis_field_deleted_list.html
+++ b/templates/laboratory/analysis_field/analysis_field_deleted_list.html
@@ -1,26 +1,32 @@
 {% extends 'main/base.html' %}
 
 {% block page_content %}
-    <h1 class="text-center">Analysis list</h1>
+    <h1 class="text-center">Deleted Analysis Fields List</h1>
     <div class="row">
         <div class="col-lg-3"></div>
-                {% if all_analysis %}
+                {% if all_deleted_analysis_fields %}
         <div class="table-responsive-md">
             <table class="table table-bordered">
                 <tr class="first-table-row">
-                    <th scope="col">Code</th>
                     <th scope="col">Name</th>
-                    <th scope="col">price</th>
-                    <th scope="col">TAT [days]</th>
-                    <th scope="col">Details</th>
+                    <th scope="col">Measuring Unit</th>
+                    <th scope="col">Reference Min Value (Male)</th>
+                    <th scope="col">Reference Max Value (Male)</th>
+                    <th scope="col">Reference Min Value (Female)</th>
+                    <th scope="col">Reference Max Value (Female)</th>
+                    <th scope="col">Comment when value outside reference range</th>
+                    <th scope="col">Restore link</th>
                 </tr>
-                {% for analysis in all_analysis %}
+                {% for analysis_field in all_deleted_analysis_fields %}
                     <tr>
-                        <td>{{ analysis.code }}</td>
-                        <td>{{ analysis.name }}</td>
-                        <td>{{ analysis.price }}</td>
-                        <td>{{ analysis.tat }}</td>
-                        <td><a href="{% url 'edit analysis' analysis.pk %}"> {{ analysis.name }} details</a></td>
+                        <td>{{ analysis_field.name }}</td>
+                        <td>{{ analysis_field.unit }}</td>
+                        <td>{{ analysis_field.male_min }}</td>
+                        <td>{{ analysis_field.male_max }}</td>
+                        <td>{{ analysis_field.female_min }}</td>
+                        <td>{{ analysis_field.female_max }}</td>
+                        <td>{{ analysis_field.comment }}</td>
+                        <td><a href="{% url 'restore analysis field' analysis_field.pk %}"> Restore</a></td>
                     </tr>
                 {% endfor %}
             </table>
@@ -44,12 +50,11 @@
                         <li class="disabled"><span>&raquo;</span></li>
                     {% endif %}
                 </ul>
-            {% endif %}
+                        {% endif %}
                     {% else %}
-                    No analysis! If you want to create one clic here:  <a href="{% url 'analysis register' %}"> Analysis register </a>
+                    No deleted analysis fields to display!
         {% endif %}
         </div>
-
         <div class="col-lg-3"></div>
     </div>
 {% endblock %}
