--- a/templates/laboratory/health_facilities_deleted_list.html
+++ b/templates/laboratory/health_facilities_deleted_list.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-lg-3"></div>
                 {% if all_deleted_facilities %}
-        <div class="col-lg-6">
+        <div class="table-responsive-md">
             <table class="table table-bordered">
                 <tr class="first-table-row">
                     <th scope="col">Name</th>
