--- a/templates/laboratory/analysis_field/analysis_field_delete.html
+++ b/templates/laboratory/analysis_field/analysis_field_delete.html
@@ -1,14 +1,14 @@
 {% extends 'main/base.html' %}
 
 {% block page_content %}
-    <h1 class="text-center">Restore Analysis Field Form</h1>
+    <h1 class="text-center">Delete Analysis Field Form</h1>
     <div class="row">
         <div class="col-lg-6">
-            <form method="post" action="{% url 'restore analysis field' analysis_field.pk %}">
+            <form method="post" action="{% url 'delete analysis field' analysis_field.pk %}">
                 {% csrf_token %}
                 {{ form }}
 
-                <button class="btn btn-primary mt-2" type="submit">Restore</button>
+                <button class="btn btn-primary mt-2" type="submit">Delete</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
