--- a/templates/users/physician/physician_deleted_list.html
+++ b/templates/users/physician/physician_deleted_list.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-lg-3"></div>
                 {% if all_physicians %}
-        <div class="col-lg-6">
+        <div class="table-responsive-md">
             <table class="table table-bordered">
                 <tr class="first-table-row">
                     <th scope="col">PID</th>
