--- a/templates/main/home_page.html
+++ b/templates/main/home_page.html
@@ -56,12 +56,23 @@
                 </p>
                 <p>
                     Analysis Fields
-                    <a href="{% url 'create analysis field' %}" class="btn btn-lg btn-secondary">Create new analysis field</a>
+                    <a href="{% url 'create analysis field' %}" class="btn btn-lg btn-secondary">Create new analysis
+                        field</a>
 
-                    <a href="{% url 'all analysis fields' %}" class="btn btn-lg btn-secondary">Show all analysis fields</a>
+                    <a href="{% url 'all analysis fields' %}" class="btn btn-lg btn-secondary">Show all analysis
+                        fields</a>
 
                     <a href="{% url 'all deleted analysis fields' %}" class="btn btn-lg btn-secondary">Show deleted
                         analysis fields</a>
+                </p>
+                <p>
+                    Analyses
+                    <a href="{% url 'create analysis' %}" class="btn btn-lg btn-secondary">Create new analysis</a>
+
+                    <a href="{% url 'all analyses' %}" class="btn btn-lg btn-secondary">Show all analyses</a>
+
+                    <a href="{% url 'all deleted analyses' %}" class="btn btn-lg btn-secondary">Show deleted
+                        analyses</a>
                 </p>
 
 
