--- a/templates/laboratory/analysis/analysis_create.html
+++ b/templates/laboratory/analysis/analysis_create.html
@@ -3,11 +3,11 @@
     <h1 class="text-center">Create New Analysis Form</h1>
     <div class="row">
         <div class="col-lg-6">
-            <form method="post" action="{% url 'analysis register' %}">
+            <form method="post" action="{% url 'create analysis' %}">
                 {% csrf_token %}
                 {{ form }}
 
-                <button class="btn btn-primary mt-2" type="submit">Create analysis</button>
+                <button class="btn btn-primary mt-2" type="submit">Create</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
