--- a/templates/laboratory/analysis/analysis_delete.html
+++ b/templates/laboratory/analysis/analysis_delete.html
@@ -1,15 +1,14 @@
 {% extends 'main/base.html' %}
-{#{% load crispy_forms_tags %}#}
+
 {% block page_content %}
     <h1 class="text-center">Delete Analysis Form</h1>
     <div class="row">
         <div class="col-lg-6">
             <form method="post" action="{% url 'delete analysis' analysis.pk %}">
                 {% csrf_token %}
-{#                {{ form|crispy }}#}
                 {{ form }}
 
-                <button class="btn btn-primary mt-2" type="submit">Delete analysis</button>
+                <button class="btn btn-primary mt-2" type="submit">Delete</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
