--- a/templates/laboratory/analysis/analysis_edit.html
+++ b/templates/laboratory/analysis/analysis_edit.html
@@ -1,4 +1,5 @@
 {% extends 'main/base.html' %}
+
 {% block page_content %}
     <h1 class="text-center">Edit Analysis Form</h1>
     <div class="row">
@@ -7,12 +8,12 @@
                 {% csrf_token %}
                 {{ form }}
 
-                <button class="btn btn-primary mt-2" type="submit">Edit analysis</button>
+                <button class="btn btn-primary mt-2" type="submit">Edit</button>
             </form>
         </div>
         <div class="col-lg-3"></div>
     </div>
     <div class="row">
-    <a href="{% url 'delete analysis' analysis.pk %}"> Delete analysis </a>
+        <a href="{% url 'delete analysis' analysis.pk %}"> Delete </a>
     </div>
 {% endblock %}
