--- a/templates/laboratory/analysis/analysis_nondeleted_list.html
+++ b/templates/laboratory/analysis/analysis_nondeleted_list.html
@@ -1,26 +1,29 @@
 {% extends 'main/base.html' %}
 
 {% block page_content %}
-    <h1 class="text-center">Analysis list</h1>
+    <h1 class="text-center">Analyses List</h1>
     <div class="row">
         <div class="col-lg-3"></div>
-                {% if all_analysis %}
-        <div class="table-responsive-md">
+        {% if all_analyses %}
+{#            <div class="col-lg-6">#}
+            <div class="table-responsive-md">
             <table class="table table-bordered">
                 <tr class="first-table-row">
-                    <th scope="col">Code</th>
                     <th scope="col">Name</th>
-                    <th scope="col">price</th>
-                    <th scope="col">TAT [days]</th>
-                    <th scope="col">Details</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Price [euro]</th>
+                    <th scope="col">Turnaround Time [days]</th>
+                    <th scope="col">Analysis Fields</th>
+                    <th scope="col">Detail link</th>
                 </tr>
-                {% for analysis in all_analysis %}
+                {% for analysis in all_analyses %}
                     <tr>
-                        <td>{{ analysis.code }}</td>
                         <td>{{ analysis.name }}</td>
+                        <td>{{ analysis.description }}</td>
                         <td>{{ analysis.price }}</td>
                         <td>{{ analysis.tat }}</td>
-                        <td><a href="{% url 'edit analysis' analysis.pk %}"> {{ analysis.name }} details</a></td>
+                        <td>{{ analysis.analysis_field.all | unordered_list}}</td>
+                        <td><a href="{% url 'edit analysis' analysis.pk %}"> Detail </a></td>
                     </tr>
                 {% endfor %}
             </table>
@@ -45,11 +48,10 @@
                     {% endif %}
                 </ul>
             {% endif %}
-                    {% else %}
-                    No analysis! If you want to create one clic here:  <a href="{% url 'analysis register' %}"> Analysis register </a>
+        {% else %}
+            No analyses to display!
         {% endif %}
         </div>
-
         <div class="col-lg-3"></div>
     </div>
 {% endblock %}
