Modify some models:     - Add field currency to analysis     - Add field analysis_price to result     - Add field currency to result     - Add field payment_amount to result     - Add field payment_type to result

--- a/templates/users/patient_details.html
+++ b/templates/users/patient_details.html
@@ -74,6 +74,9 @@
                 <a href="{% url 'delete patient' object.pk %}"> Delete Patient</a>
             </p>
         {% endif %}
+        <p>
+            <a href="{% url 'add analyses to patient' object.pk %}"> Add Analysis to Patient</a>
+        </p>
         <div class="col-lg-3"></div>
     </div>
 {% endblock %}
