--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -51,7 +51,9 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         {% if user.is_authenticated %}
-         <a class="nav-link" href="{% url 'logout user' %}">Logout <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'logout user' %}">Logout <span class="sr-only">(current)</span></a>
+        {% else %}
+            <a class="nav-link" href="{% url 'login user' %}">Login <span class="sr-only">(current)</span></a>
         {% endif %}
     </div>
 </nav>
@@ -65,42 +67,42 @@
 {% block bottom_page_content %}
 {% endblock %}
 
-<!-- Page Footer -->
+{#<!-- Page Footer -->#}
 {#<footer class="fixed-bottom card-footer ">#}
 {#    <div>@Laboratory Managment System Project (author: Andrey Kirov)</div>#}
 {#</footer>#}
-<!-- Footer -->
+{#<!-- Footer -->#}
 <footer class="text-center text-lg-start bg-light text-muted">
-{#    <!-- Section: Social media -->#}
-{#    <section#}
-{#            class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">#}
-{#        <!-- Left -->#}
-{##}
-{#        <!-- Left -->#}
-{##}
-{#        <!-- Right -->#}
-{#        <div>#}
-{#            <a href="" class="me-4 text-reset">#}
-{#                <i class="fab fa-facebook-f"></i>#}
-{#            </a>#}
-{#            <a href="" class="me-4 text-reset">#}
-{#                <i class="fab fa-twitter"></i>#}
-{#            </a>#}
-{#            <a href="" class="me-4 text-reset">#}
-{#                <i class="fab fa-google"></i>#}
-{#            </a>#}
-{#            <a href="" class="me-4 text-reset">#}
-{#                <i class="fab fa-instagram"></i>#}
-{#            </a>#}
-{#            <a href="" class="me-4 text-reset">#}
-{#                <i class="fab fa-linkedin"></i>#}
-{#            </a>#}
-{#            <a href="" class="me-4 text-reset">#}
-{#                <i class="fab fa-github"></i>#}
-{#            </a>#}
-{#        </div>#}
-{#        <!-- Right -->#}
-{#    </section>#}
+    {#    <!-- Section: Social media -->#}
+    {#    <section#}
+    {#            class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">#}
+    {#        <!-- Left -->#}
+    {##}
+    {#        <!-- Left -->#}
+    {##}
+    {#        <!-- Right -->#}
+    {#        <div>#}
+    {#            <a href="" class="me-4 text-reset">#}
+    {#                <i class="fab fa-facebook-f"></i>#}
+    {#            </a>#}
+    {#            <a href="" class="me-4 text-reset">#}
+    {#                <i class="fab fa-twitter"></i>#}
+    {#            </a>#}
+    {#            <a href="" class="me-4 text-reset">#}
+    {#                <i class="fab fa-google"></i>#}
+    {#            </a>#}
+    {#            <a href="" class="me-4 text-reset">#}
+    {#                <i class="fab fa-instagram"></i>#}
+    {#            </a>#}
+    {#            <a href="" class="me-4 text-reset">#}
+    {#                <i class="fab fa-linkedin"></i>#}
+    {#            </a>#}
+    {#            <a href="" class="me-4 text-reset">#}
+    {#                <i class="fab fa-github"></i>#}
+    {#            </a>#}
+    {#        </div>#}
+    {#        <!-- Right -->#}
+    {#    </section>#}
     <!-- Section: Social media -->
 
     <!-- Section: Links  -->
@@ -115,31 +117,31 @@
                         <i class="fas fa-gem me-3"></i>Company name
                     </h6>
                     <p>
-                        Here you can use rows and columns to organize your footer content. Lorem ipsum
-                        dolor sit amet, consectetur adipisicing elit.
+                        KirovLab Ltd is the unique and essential partner for patients, physicians and hospitals helping
+                        them with routine diagnostics.
                     </p>
                 </div>
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <!-- Links -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Products
-                    </h6>
-                    <p>
-                        <a href="#!" class="text-reset">Angular</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">React</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Vue</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Laravel</a>
-                    </p>
-                </div>
+{#                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">#}
+{#                    <!-- Links -->#}
+{#                    <h6 class="text-uppercase fw-bold mb-4">#}
+{#                        Products#}
+{#                    </h6>#}
+{#                    <p>#}
+{#                        <a href="#!" class="text-reset">Angular</a>#}
+{#                    </p>#}
+{#                    <p>#}
+{#                        <a href="#!" class="text-reset">React</a>#}
+{#                    </p>#}
+{#                    <p>#}
+{#                        <a href="#!" class="text-reset">Vue</a>#}
+{#                    </p>#}
+{#                    <p>#}
+{#                        <a href="#!" class="text-reset">Laravel</a>#}
+{#                    </p>#}
+{#                </div>#}
                 <!-- Grid column -->
 
                 <!-- Grid column -->
@@ -149,16 +151,10 @@
                         Useful links
                     </h6>
                     <p>
-                        <a href="#!" class="text-reset">Pricing</a>
+                        <a href="{% url 'index' %}" class="text-reset">Home</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">Settings</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Orders</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Help</a>
+                        <a href="{% url 'all analyses' %}" class="text-reset">Analyses</a>
                     </p>
                 </div>
                 <!-- Grid column -->
